# rs-fxr

./: Cargo.toml  README.md  index.html
.github/workflows/: wasm.yml
docs/: .rustc_info.json  README.md  index.html
docs/doc/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/doc/implementors/core/fmt/: trait.Debug.js
docs/doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/doc/implementors/rs_fxr/traits/: trait.ProcState.js
docs/doc/rs_fxr/: all.html  index.html  sidebar-items.js  struct.Samples.html
docs/doc/rs_fxr/bit_crush/: enum.BitCrush.html  index.html  sidebar-items.js  struct.BitCrushedSound.html  trait.BitCrushable.html
docs/doc/rs_fxr/envelope/: index.html  sidebar-items.js  struct.Envelope.html  struct.Interval.html
docs/doc/rs_fxr/noise/: index.html  sidebar-items.js  struct.BrownNoise.html  struct.Noise.html  struct.PinkNoise.html  struct.WhiteNoise.html
docs/doc/rs_fxr/passband/: index.html  trait.Filterable.html
docs/doc/rs_fxr/serde/: enum.WaveformType.html  index.html  sidebar-items.js  struct.Description.html
docs/doc/rs_fxr/synth/: index.html  sidebar-items.js  struct.Synth.html
docs/doc/rs_fxr/traits/: index.html  sidebar-items.js  trait.Duration.html  trait.Proc.html  trait.ProcState.html  trait.Synth.html
docs/doc/rs_fxr/waveform/: index.html  sidebar-items.js  struct.Breaker.html  struct.Sawtooth.html  struct.Sine.html  struct.Square.html  struct.Tangent.html  struct.Triangle.html
docs/doc/src/rs_fxr/: bit_crush.rs.html  envelope.rs.html  lib.rs.html  noise.rs.html  passband.rs.html  synth.rs.html  traits.rs.html  waveform.rs.html
examples/: beep.rs  json.rs  wav.rs
src/: bit_crush.rs  envelope.rs  lib.rs  main.rs  noise.rs  passband.rs  phase.rs  sound.rs  synth.rs  traits.rs  waveform.rs
src/json/: mod.rs
src/serde/: json.rs  mod.rs
src/tests/: mod.rs
src/waveform/: mod.rs  noise.rs  synth.rs
(+14 files in other folders)
