[package]
name = "rs-fxr"
version = "0.1.0"
edition = "2021"

[[example]]
name = "beep"

[[example]]
name = "json"
required-features = ["json"]

[dependencies]
rand = "0.8.5"
realfft = "3.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
validator = { version = "0.16", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.69"
cpal = "0.14.2"
hound = "3.5.0"

[features]
serde = ["dep:serde", "dep:validator"]
json = ["serde", "dep:serde_json"]
yaml = ["serde", "dep:serde_yaml"]
